<resources>
    <string name="app_name">SafeWay App</string>
    <string name="splashScreen">SafeWay</string>
    <string name="apresentacao">Seja Bem-vindo(a)!</string>
    <string name="login">Realize seu Login aqui:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="botaoLogin">LOGIN</string>
    <string name="esqueciSenha"><u>Esqueci minha senha.</u></string>
    <string name="botaoLoginComGoogle">Entrar com </string>
    <string name="semCadastro">Não possui conta?</string>
    <string name="cadastraAqui"><u>Cadastre-se aqui!</u></string>
    <string name="cliente_id">138906851168-go13n79b5qq78a82e6f8bji3gvi2pcld.apps.googleusercontent.com</string>
    <string name="Cadastro">Área de Cadastro</string>
    <string name="informar">Insira seus dados cadastrais!</string>
    <string name="botaoCadastrar">CADASTRAR</string>
    <string name="porqueDados"><u>Para que serve meus dados?</u></string>
    <string name="dicaNome">Insira seu nome</string>
    <string name="dicaTelefone">Insira seu número de celular</string>
    <string name="dicaConfirmarSenha">Repita sua senha</string>
    <string name="dicaDTNascimento">Insira sua data de nascimento clicando no ícone</string>
    <string name="dicaEmail">Insira seu email:</string>
    <string name="dicaSenha">Crie uma senha:</string>
    <string name="voltarLogin">Voltar</string>
    <string name="title_activity_tela_principal">activity_tela_principal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Usuario">Usuario: </string>
    <string name="MenuMapa">Mapa</string>
    <string name="MenuChat">Chat</string>
    <string name="emailParaLinkDeRecuperacao">Digite aqui o email desejado:</string>
    <string name="informarEmailRecuperacao">Informe abaixo o email para \n enviarmos o link de recuperação de senha</string>
    <string name="cumprimentoTelaEsqueciSenha">Olá!</string>
    <string name="apresentacaoTelaEsqueciSenha">Estamos aqui para te ajudar a\n redefinir sua senha.</string>
    <string name="explicandoTelaLoginSenha">Para redefinirmos sua senha, iremos enviar um email com um link de redefinição de senha para você.\n</string>
    <string name="RegrasLinkDeRecuperação">Para não ocorrer erros, certifique-se que:\n
        • O email informado é válido;\n
        • O email informado está cadastrado.
    </string>
    <string name="mensagemAmigavelLinkRecuperacao">Vamos Lá?!</string>
    <string name="btnEnviarLinkrecuperacao">Enviar Email de Recuperação.</string>
    <string name="arrastaPraCima">Deslize para cima para continuar lendo.</string>
    <string name="TituloTermosDeUso">Termos de Uso</string>
    <string name="TermosDeUsoCompletoTeste">TERMO DE USO
\n
Última Atualização: [Data]
\n
Bem-vindo ao [Nome do Aplicativo] (doravante "Aplicativo", "Nós", "Nosso", "Nos"), um serviço disponibilizado pela [Nome da Empresa], uma empresa registrada sob as leis do [País]. Este documento tem como objetivo estabelecer os Termos e Condições de uso ("Termos de Uso") que regem a utilização do Aplicativo. Ao acessar ou utilizar nosso Aplicativo, você concorda em cumprir e estar vinculado a estes Termos de Uso.
\n
1. DEFINIÇÕES
\n
1.1 Usuário: Qualquer pessoa que acesse ou use o Aplicativo, seja para fins pessoais ou comerciais.
\n
1.2 Serviços: Os serviços fornecidos pelo Aplicativo, incluindo, mas não se limitando a, [descrever brevemente os serviços do aplicativo].
\n
1.3 Conteúdo: Qualquer informação, texto, gráficos, imagens, vídeos, software, sons ou outros materiais gerados, fornecidos ou disponibilizados pelo Aplicativo.
\n
2. ACEITAÇÃO DOS TERMOS
\n
2.1 O uso do Aplicativo está sujeito à sua aceitação e conformidade com estes Termos de Uso. Ao acessar ou utilizar o Aplicativo, você concorda com os Termos de Uso descritos abaixo.
\n
2.2 Se você não concordar com qualquer uma das condições estabelecidas, você não poderá utilizar os serviços do Aplicativo.
\n
3. MODIFICAÇÃO DOS TERMOS DE USO
\n
3.1 Reservamo-nos o direito de, a qualquer momento, modificar ou atualizar estes Termos de Uso. Quaisquer modificações serão publicadas no Aplicativo e entrarão em vigor imediatamente após a publicação.
\n
3.2 É sua responsabilidade revisar os Termos de Uso periodicamente para se manter atualizado sobre quaisquer mudanças. O uso contínuo do Aplicativo após as alterações constitui sua aceitação das alterações.
\n
4. CADASTRO E CONTA DO USUÁRIO
\n
4.1 Para acessar determinados recursos do Aplicativo, você poderá ser solicitado a criar uma conta de usuário. Ao criar uma conta, você concorda em fornecer informações precisas, completas e atualizadas sobre você.
\n
4.2 Você é responsável por manter a confidencialidade de sua conta e senha e por todas as atividades que ocorram em sua conta.
\n
4.3 Caso você descubra qualquer uso não autorizado de sua conta, deverá notificar-nos imediatamente.
\n
5. LICENÇA DE USO
\n
5.1 Concedemos a você uma licença limitada, não exclusiva, intransferível e revogável para usar o Aplicativo para fins pessoais ou comerciais, de acordo com estes Termos de Uso.
\n
5.2 Você não poderá copiar, modificar, distribuir, vender, alugar, sublicenciar ou criar trabalhos derivados do Aplicativo, sem a nossa permissão expressa por escrito.
\n
6. OBRIGAÇÕES DO USUÁRIO
\n
6.1 O Usuário concorda em usar o Aplicativo de maneira legal, ética e responsável.
\n
6.2 O Usuário não pode:
\n
Utilizar o Aplicativo para fins ilegais, fraudulentos ou prejudiciais.
\n
Interferir nos servidores ou redes do Aplicativo.
\n
Violar qualquer lei local, estadual, nacional ou internacional aplicável.
\n
Tentar acessar ou obter informações de maneira não autorizada.
\n
7. PRIVACIDADE E PROTEÇÃO DE DADOS
\n
7.1 Sua privacidade é importante para nós. O uso de seus dados pessoais está sujeito à nossa Política de Privacidade, que é parte integrante destes Termos de Uso.
\n
7.2 Ao usar o Aplicativo, você concorda com a coleta, uso e compartilhamento de seus dados pessoais conforme descrito em nossa Política de Privacidade.
\n
8. PROPRIEDADE INTELECTUAL
\n
8.1 Todos os direitos de propriedade intelectual sobre o Aplicativo, incluindo, mas não se limitando a, software, código-fonte, logotipos, ícones, marcas registradas e conteúdos, são de nossa propriedade ou licenciados a nós.
\n
8.2 O uso do Aplicativo não concede ao Usuário nenhum direito sobre a propriedade intelectual do Aplicativo, exceto conforme explicitamente permitido por estes Termos de Uso.
\n
9. ISENÇÃO DE RESPONSABILIDADE
\n
9.1 O Aplicativo é fornecido "no estado em que se encontra", sem garantias de qualquer tipo, expressas ou implícitas. Não garantimos que o Aplicativo será ininterrupto ou livre de erros.
\n
9.2 Não seremos responsáveis por quaisquer danos diretos, indiretos, incidentais, especiais ou consequenciais decorrentes do uso ou da impossibilidade de uso do Aplicativo, incluindo, mas não se limitando a, perda de dados ou lucros.
\n
10. LIMITAÇÃO DE RESPONSABILIDADE
\n
10.1 Nossa responsabilidade total, seja por contrato, ato ilícito ou qualquer outro motivo, em relação ao uso do Aplicativo, está limitada ao valor total pago por você (se houver) pelo uso do Aplicativo nos últimos 12 meses.
\n
11. ENCERRAMENTO E SUSPENSÃO
\n
11.1 Podemos suspender ou encerrar sua conta a qualquer momento, sem aviso prévio, se acreditarmos que você violou qualquer um dos termos e condições descritos nestes Termos de Uso.
\n
11.2 Após o encerramento ou suspensão de sua conta, todas as disposições dos Termos de Uso que, por sua natureza, devam sobreviver, continuarão em vigor, incluindo, mas não se limitando a, disposições sobre propriedade intelectual, isenção de responsabilidade e limitações de responsabilidade.
\n
12. LEGISLAÇÃO APLICÁVEL E FORO
\n
12.1 Estes Termos de Uso são regidos pelas leis do [País], sem considerar seus conflitos de princípios legais.
\n
12.2 Qualquer disputa decorrente ou relacionada a estes Termos de Uso será resolvida nos tribunais competentes da [Cidade], [Estado], [País].
\n
13. DISPOSIÇÕES GERAIS
\n
13.1 Se qualquer disposição destes Termos de Uso for considerada inválida ou inexequível, as disposições restantes permanecerão em pleno vigor e efeito.
\n
13.2 Estes Termos de Uso constituem o acordo completo entre você e nós em relação ao uso do Aplicativo, substituindo qualquer acordo anterior ou contemporâneo, verbal ou escrito, relativo ao mesmo assunto.
\n
14. CONTATO
\n
14.1 Se você tiver dúvidas sobre estes Termos de Uso, por favor, entre em contato conosco pelo e-mail: [e-mail de contato].</string>
    <string name="TituloPoliticaDePrivacidade">Política de Privacidade</string>
    <string name="deslizarCima">Se necessário, arraste a tela para cima.</string>
    <string name="boas_vindas">Olá! Seja bem-vindo(a)!</string>
    <string name="introducao_dados">
    Antes de começarmos, queremos ser 100% transparentes com você sobre o uso dos seus dados. A sua privacidade e segurança são prioridades pra gente, e todas as informações que você fornecer serão usadas exclusivamente para melhorar sua experiência no nosso app.
</string>
    <string name="titulo_dados">Por que precisamos dos seus dados?</string>
    <string name="nome_dado">
    🧑 Nome:\n- Usado para que outros usuários possam te identificar com mais facilidade.\n- Também nos ajuda a localizar sua conta com mais rapidez caso você entre em contato com o suporte.
    </string>
    <string name="data_nascimento_dado">
    🎂 Data de nascimento:\n- Serve para verificarmos se você tem idade suficiente para utilizar o app de acordo com os nossos Termos de Uso.
    </string>
    <string name="telefone_dado">
    📞 Telefone:\n- Usado como método de login e autenticação via SMS.\n- Também pode ser utilizado para você adicionar contatos ou ser adicionado como contato por outras pessoas.
    </string>
    <string name="email_dado">
    📧 E-mail:\n- Serve como uma alternativa de login e autenticação.\n- Será utilizado para recuperação de senha e comunicação em casos de suporte técnico ou avisos importantes.
    </string>
    <string name="senha_dado">
    🔒 Senha:\n- Utilizada exclusivamente para garantir a segurança da sua conta e proteger o acesso aos seus dados.
    </string>
    <string name="agradecimento">Obrigado por confiar na gente! 💙</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>