<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deslizarCima"
            android:textColor="#86FF0000"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/boas_vindas"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="16dp"
            android:text="@string/introducao_dados"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/titulo_dados"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/nome_dado"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/data_nascimento_dado"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_marginBottom="8dp"
            android:text="@string/telefone_dado"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email_dado"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/senha_dado"
            android:textSize="16sp" />

        <TextView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/agradecimento"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnVoltarUsoDeDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/black"
            android:text="@string/voltarLogin"
            android:textSize="20sp"
            app:cornerRadius="2dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>